# quackwrangler

./: .gitignore  .prettierrc  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.webview.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
media/: sample.csv
src/: extension.ts
src/commands/: index.ts
src/duckdb/: connection.ts  parquet-loader.ts  query-engine.ts
src/sidecar/: index.ts  polars-bridge.py  polars-process.ts
src/transforms/: codegen.ts  pipeline.ts  registry.ts
src/types/: index.ts
src/utils/: fileDetector.ts
src/webview/: provider.ts
tests/fixtures/: test-data.ts
tests/integration/: duckdb-operations.test.ts
tests/unit/duckdb/: connection.test.ts  parquet-loader.test.ts  query-engine.test.ts
tests/unit/transforms/: codegen.test.ts  pipeline.test.ts  registry.test.ts
tests/unit/utils/: fileDetector.test.ts
tests/unit/webview/: data-grid.test.ts
webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webview-ui/src/: App.tsx  main.tsx  types.ts
webview-ui/src/components/: CodePreview.tsx  ColumnProfiles.tsx  ColumnStats.tsx  DataGrid.tsx  ExportPanel.tsx  FilterPanel.tsx  Header.tsx  OperationsPanel.tsx  QueryConsole.tsx  TransformPanel.tsx
webview-ui/src/hooks/: useVSCodeAPI.ts
webview-ui/src/styles/: theme.css
